refactor: move inline styles and scripts to external files

--- a/public/index.html
+++ b/public/index.html
@@ -5,64 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video to Audio and Slides Converter</title>
     <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        .container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 100%;
-            text-align: center;
-        }
-        label, input, button, audio, video {
-            margin: 10px 0;
-            width: 100%;
-        }
-        input[type="file"] {
-            padding: 10px;
-        }
-        input[type="number"] {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 15px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        audio, video {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -76,96 +19,6 @@
         <button id="convertToSlidesButton">Convert to Slides</button>
         <video id="videoPlayer" controls></video>
     </div>
-
-    <script>
-        const { createFFmpeg, fetchFile } = FFmpeg;
-        const ffmpeg = createFFmpeg({ log: true });
-
-        async function readFileAsArrayBuffer(file) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onload = () => resolve(reader.result);
-                reader.onerror = () => reject(new Error('File could not be read! Code=' + reader.error.code));
-                reader.readAsArrayBuffer(file);
-            });
-        }
-
-        document.getElementById('convertButton').addEventListener('click', async () => {
-            const videoFile = document.getElementById('videoInput').files[0];
-            if (!videoFile) {
-                alert('Please select a video file first.');
-                return;
-            }
-
-            try {
-                if (!ffmpeg.isLoaded()) {
-                    await ffmpeg.load();
-                }
-
-                const videoData = await readFileAsArrayBuffer(videoFile);
-                console.log('Video data loaded:', videoData);
-
-                ffmpeg.FS('writeFile', 'input.mp4', new Uint8Array(videoData));
-                await ffmpeg.run('-i', 'input.mp4', 'output.mp3');
-                const data = ffmpeg.FS('readFile', 'output.mp3');
-                console.log('FFmpeg output data:', data);
-
-                const audioBlob = new Blob([data.buffer], { type: 'audio/mp3' });
-                const audioUrl = URL.createObjectURL(audioBlob);
-                console.log('Audio URL:', audioUrl);
-
-                const audioPlayer = document.getElementById('audioPlayer');
-                audioPlayer.src = audioUrl;
-
-                const downloadLink = document.createElement('a');
-                downloadLink.href = audioUrl;
-                downloadLink.download = 'converted_audio.mp3';
-                downloadLink.textContent = 'Download Audio';
-                document.body.appendChild(downloadLink);
-            } catch (error) {
-                console.error('Error converting video to audio:', error);
-                alert('An error occurred while converting the video to audio.');
-            }
-        });
-
-        document.getElementById('convertToSlidesButton').addEventListener('click', async () => {
-            const videoFile = document.getElementById('videoInput').files[0];
-            const frameRate = document.getElementById('frameRate').value;
-            if (!videoFile) {
-                alert('Please select a video file first.');
-                return;
-            }
-
-            try {
-                if (!ffmpeg.isLoaded()) {
-                    await ffmpeg.load();
-                }
-
-                const videoData = await readFileAsArrayBuffer(videoFile);
-                console.log('Video data loaded:', videoData);
-
-                ffmpeg.FS('writeFile', 'input.mp4', new Uint8Array(videoData));
-                await ffmpeg.run('-i', 'input.mp4', '-vf', `fps=${frameRate}`, '-max_muxing_queue_size', '9999', 'output.mp4');
-                const data = ffmpeg.FS('readFile', 'output.mp4');
-                console.log('FFmpeg output data:', data);
-
-                const videoBlob = new Blob([data.buffer], { type: 'video/mp4' });
-                const videoUrl = URL.createObjectURL(videoBlob);
-                console.log('Video URL:', videoUrl);
-
-                const videoPlayer = document.getElementById('videoPlayer');
-                videoPlayer.src = videoUrl;
-
-                const downloadLink = document.createElement('a');
-                downloadLink.href = videoUrl;
-                downloadLink.download = 'converted_video.mp4';
-                downloadLink.textContent = 'Download Video';
-                document.body.appendChild(downloadLink);
-            } catch (error) {
-                console.error('Error converting video to slides:', error);
-                alert('An error occurred while converting the video to slides.');
-            }
-        });
-    </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
