--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,7 @@
     <p>&copy; 2023 Video Converter</p>
   </footer>
   <script src="scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </body>
 </html>
