--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <section class="upload-section">
       <label for="videoInput" class="custom-file-upload">Choose Video</label>
       <input type="file" id="videoInput" accept="video/*" title="Choose a video file" />
+      <span id="fileNameDisplay">No file chosen</span>
     </section>
 
     <section class="convert-section">
